# oglcnac-matcher

./: .gitignore  .scan-exclude  README.md  pyproject.toml  repo-structure.txt
data/processed/: hexnac_sites_clean.csv  phospho_sites_clean.csv  protein_groups_clean.csv
data/raw/: HexNAc-sites.xlsx  phospho-sites.xlsx  protein-groups.xlsx
reports/quick/: summary.md
scripts/: run_parser.py
src/oglcnac_matcher/: io.py  matcher.py  parsers.py  report.py
tests/: smoketest_parser.py  test_matcher.py
